--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -36,6 +36,9 @@
                 <li>
                     <a href="#/add-product">Product</a>
                 </li>
+                <li>
+                    <a href="#/basket">Basket</a>
+                </li>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
